basic controller stuff written basic test setup done, currently only unit tests test stuff added to makefile, so its easier to run TODO: find out if there is a way to do that only using rails

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  name: MyString
-  password: MyString
-  room_id: 1
+  name: hcf
+  password: pass
+  room_id: 
 
 two:
-  name: MyString
-  password: MyString
+  name: user
+  password: pass
   room_id: 1
