--- a/test/fixtures/rooms.yml
+++ b/test/fixtures/rooms.yml
@@ -2,14 +2,23 @@
 
 one:
   name: MyString
-  password: MyString
+  password: ""  
   private: false
   user_id: 1
   id: 1
+  last_post: <%= Time.new + 1.hour %>
 
 two:
   name: MyString
-  password: MyString
+  password: MyPass
   private: false
   user_id: 1
   id: 2
+
+json:
+  name: json_test_room
+  password: pass
+  private: false
+  user_id: 1
+  id: 3
+  last_post: <%= Time.new + 1.hour %>
